--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       </video>
 
     </section>
+<footer>
+  &copy; 2017 Exceptional Realty. All rights reserved.
+</footer>
 
   </body>
 </html>
